[Rx] Fixed spacing between tabs and table on History page. (#3597)
* Make sort menu a block element instead of inline-block. Eliminates residual spacing when not visible.

* Removed excess space above table in History.

* Removed unused class name.

* Spacing of History table under sort menu in mobile.

--- a/src/sass/rx/partials/_rx-history.scss
+++ b/src/sass/rx/partials/_rx-history.scss
@@ -5,6 +5,8 @@
 }
 
 #rx-history table {
+  margin-top: 0;
+
   tr {
     &:last-child {
       td {
@@ -23,6 +25,8 @@
   }
 
   @media (max-width: $medium-screen) {
+    margin-top: 2rem;
+
     td {
       // Get the prescription name to appear above the other fields.
       &:nth-child(3) { display: table-header-group; }
